Small bug that put the brand logo of the discount cards above any modal fixed by increasing the modal z-index to 3

--- a/nextcampuscanvas/src/components/GeneralUseComponents/Modal/Modal.module.scss
+++ b/nextcampuscanvas/src/components/GeneralUseComponents/Modal/Modal.module.scss
@@ -36,4 +36,5 @@
   align-items: center;
   background: center;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 3;
 }
